Added API to get merchant data by merchantID
